UM-197: Shop tests
