# static/swaggerAuth.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.0",
   "info": {
     "title": "Auth API Documentation",
-    "description": "API for marketplase.",
+    "description": "API for marketplace.",
     "version": "1.0.3"
   },
   "paths": {
@@ -39,7 +39,7 @@
             }
           },
           "400": {
-            "description": "Bad Request"
+            "$ref": "#/components/responses/BadRequest"
           },
           "401": {
             "description": "User with such email already exists"
@@ -130,7 +130,7 @@
             }
           },
           "401": {
-            "description": "Unauthorized"
+            "$ref": "#/components/responses/UnauthorizedError"
           }
         }
       }
@@ -220,10 +220,10 @@
             }
           },
           "404": {
-            "description": "User not found"
+            "$ref": "#/components/responses/UserNotFound"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
           }
         }
       }
@@ -262,10 +262,10 @@
             }
           },
           "404": {
-            "description": "User not found"
+            "$ref": "#/components/responses/UserNotFound"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
           }
         }
       }
@@ -304,13 +304,16 @@
             }
           },
           "404": {
-            "description": "User not found"
+            "$ref": "#/components/responses/UserNotFound"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
+          },
+          "422": {
+            "$ref": "#/components/responses/ValidationError"
           },
           "401": {
-            "description": "Incomplete or empty name. Provide name for the shop."
+            "$ref": "#/components/responses/UnauthorizedError"
           }
         }
       }
@@ -349,10 +352,10 @@
             }
           },
           "404": {
-            "description": "User not found"
+            "$ref": "#/components/responses/UserNotFound"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
           }
         }
       },
@@ -378,7 +381,7 @@
             }
           },
           "404": {
-            "description": "User not found"
+            "$ref": "#/components/responses/UserNotFound"
           },
           "400": {
             "description": "User not have delivery address"
@@ -420,10 +423,10 @@
             }
           },
           "404": {
-            "description": "User not found"
+            "$ref": "#/components/responses/UserNotFound"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
           }
         }
       },
@@ -449,7 +452,7 @@
             }
           },
           "404": {
-            "description": "User not found"
+            "$ref": "#/components/responses/UserNotFound"
           }
         }
       }
@@ -482,21 +485,21 @@
             "content": {
               "application/json": {
                 "example": {
-                  "message": "Shop photo uploaded successfully"
+                  "photo_shop": "https://api.dorechi.store/static/media/shops/filename.png"
                 }
               }
             }
           },
           "404": {
-            "description": "Shop not found"
+            "$ref": "#/components/responses/ShopNotFound"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
           }
         }
       },
       "delete": {
-        "summary": "Delete shop Photo",
+        "summary": "Delete Shop Photo",
         "tags": [
           "Shop"
         ],
@@ -517,7 +520,33 @@
             }
           },
           "404": {
-            "description": "Shop not found"
+            "$ref": "#/components/responses/ShopNotFound"
+          }
+        }
+      },
+      "get": {
+        "summary": "Get Shop Photo",
+        "tags": [
+          "Shop"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Receive  url for shop photo",
+            "content": {
+              "application/json": {
+                "example": {
+                  "photo_shop": "https://api.dorechi.store/static/media/shops/filename.png"
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/ShopNotFound"
           }
         }
       }
@@ -550,16 +579,16 @@
             "content": {
               "application/json": {
                 "example": {
-                  "message": "Shop banner uploaded successfully"
+                  "banner_shop": "https://api.dorechi.store/static/media/banner_shops/filename.png"
                 }
               }
             }
           },
           "404": {
-            "description": "Shop not found"
+            "$ref": "#/components/responses/ShopNotFound"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
           }
         }
       },
@@ -585,7 +614,33 @@
             }
           },
           "404": {
-            "description": "Shop not found"
+            "$ref": "#/components/responses/ShopNotFound"
+          }
+        }
+      },
+      "get": {
+        "summary": "Get Shop Banner",
+        "tags": [
+          "Shop"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Receive absolute url for shop banner",
+            "content": {
+              "application/json": {
+                "example": {
+                  "banner_shop": "https://api.dorechi.store/static/media/banner_shops/filename.png"
+                }
+              }
+            }
+          },
+          "404": {
+            "$ref": "#/components/responses/ShopNotFound"
           }
         }
       }
@@ -638,7 +693,7 @@
             "description": "Product not found"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
           }
         }
       }
@@ -837,152 +892,6 @@
         }
       }
     },
-    "/categories/categories_detail": {
-      "get": {
-        "summary": "Get categories and subcategories JSON from active products in DB",
-        "tags": [
-          "Categories"
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful",
-            "content": {
-              "application/json": {
-                "example": [
-                  {
-                    "id": 1,
-                    "label": "На голову",
-                    "subcategories": [
-                      [
-                        11,
-                        "Заколки"
-                      ],
-                      [
-                        12,
-                        "Обручі"
-                      ],
-                      [
-                        13,
-                        "Резинки"
-                      ],
-                      [
-                        14,
-                        "Хустинки"
-                      ]
-                    ]
-                  },
-                  {
-                    "id": 2,
-                    "label": "На вуха",
-                    "subcategories": [
-                      [
-                        21,
-                        "Сережки"
-                      ],
-                      [
-                        22,
-                        "Моносережки"
-                      ]
-                    ]
-                  },
-                  {
-                    "id": 3,
-                    "label": "На шию",
-                    "subcategories": [
-                      [
-                        31,
-                        "Зґарди"
-                      ],
-                      [
-                        32,
-                        "Шелести"
-                      ],
-                      [
-                        33,
-                        "Ґердани"
-                      ],
-                      [
-                        34,
-                        "Силянки"
-                      ],
-                      [
-                        35,
-                        "Кризи"
-                      ],
-                      [
-                        36,
-                        "Чокери"
-                      ],
-                      [
-                        37,
-                        "Намиста"
-                      ],
-                      [
-                        38,
-                        "Дукачі"
-                      ],
-                      [
-                        39,
-                        "Кулони та підвіски"
-                      ]
-                    ]
-                  },
-                  {
-                    "id": 4,
-                    "label": "На руки",
-                    "subcategories": [
-                      [
-                        41,
-                        "Браслети"
-                      ],
-                      [
-                        42,
-                        "Каблучки"
-                      ]
-                    ]
-                  },
-                  {
-                    "id": 5,
-                    "label": "Аксесуари",
-                    "subcategories": [
-                      [
-                        51,
-                        "Котильйони"
-                      ],
-                      [
-                        52,
-                        "Брошки"
-                      ],
-                      [
-                        53,
-                        "Сумки"
-                      ]
-                    ]
-                  },
-                  {
-                    "id": 6,
-                    "label": "Набори",
-                    "subcategories": [
-                      [
-                        61,
-                        "Набір"
-                      ]
-                    ]
-                  }
-                ],
-                "schema": {
-                  "type": "object",
-                  "description": "JSON data for categories and subcategories"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "File not found in the specified location"
-          }
-        }
-      }
-    },
     "/accounts/change_password": {
       "post": {
         "summary": "Change Password",
@@ -1017,10 +926,10 @@
             }
           },
           "404": {
-            "description": "User not found"
+            "$ref": "#/components/responses/UserNotFound"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
           }
         }
       }
@@ -1048,7 +957,7 @@
             }
           },
           "401": {
-            "description": "Unauthorized"
+            "$ref": "#/components/responses/UnauthorizedError"
           }
         }
       }
@@ -1076,10 +985,10 @@
             }
           },
           "401": {
-            "description": "Unauthorized"
+            "$ref": "#/components/responses/UnauthorizedError"
           },
           "404": {
-            "description": "There is no store by user"
+            "$ref": "#/components/responses/ShopNotFound"
           }
         }
       }
@@ -1107,10 +1016,10 @@
             }
           },
           "401": {
-            "description": "Unauthorized"
+            "$ref": "#/components/responses/UnauthorizedError"
           },
           "404": {
-            "description": "There is no store by user"
+            "$ref": "#/components/responses/ShopNotFound"
           }
         }
       }
@@ -1160,10 +1069,10 @@
             }
           },
           "404": {
-            "description": "User not found"
+            "$ref": "#/components/responses/UserNotFound"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
           },
           "401": {
             "description": "Mandatory fields are unfilled or empty"
@@ -1208,10 +1117,10 @@
             "description": "Not found"
           },
           "400": {
-            "description": "Invalid request"
+            "$ref": "#/components/responses/BadRequest"
           },
           "401": {
-            "description": "Error"
+            "$ref": "#/components/responses/UnauthorizedError"
           }
         }
       }
@@ -1250,19 +1159,126 @@
             }
           },
           "404": {
-            "description": "User not found"
+            "$ref": "#/components/responses/UserNotFound"
           },
           "400": {
-            "description": "Invalid request data"
+            "$ref": "#/components/responses/BadRequest"
           },
           "401": {
-            "description": "Mandatory fields are unfilled or empty"
+            "$ref": "#/components/responses/UnauthorizedError"
           }
         }
       }
     }
   },
   "components": {
+    "responses": {
+      "UnauthorizedError": {
+        "description": "Unauthorized error response",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "msg": {
+                  "type": "string",
+                  "example": "Missing Authorization Header"
+                }
+              }
+            }
+          }
+        }
+      },
+      "BadRequest": {
+        "description": "Bad Request",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "Invalid request data"
+                }
+              }
+            }
+          }
+        }
+      },
+      "ShopNotFound": {
+        "description": "Shop not found",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "Shop not found"
+                }
+              }
+            }
+          }
+        }
+      },
+      "UserNotFound": {
+        "description": "User not found",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "string",
+                  "example": "User not found"
+                }
+              }
+            }
+          }
+        }
+      },
+      "ValidationError": {
+        "description": "Validation Error",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "error": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "loc": {
+                        "type": "array",
+                        "items": {
+                          "type": "string"
+                        }
+                      },
+                      "msg": {
+                        "type": "string"
+                      },
+                      "type": {
+                        "type": "string"
+                      }
+                    }
+                  },
+                  "example": [
+                    {
+                      "loc": [
+                        "phone_number"
+                      ],
+                      "msg": "Value error, Invalid phone number format. Must start with +380 and have 9 digits.",
+                      "type": "value_error"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "schemas": {
       "SignupUserSchema": {
         "type": "object",
@@ -1300,7 +1316,8 @@
             "maxLength": 500
           },
           "phone_number": {
-            "type": "string"
+            "type": "string",
+            "example": "+380000000000"
           },
           "link": {
             "type": "string"
@@ -1472,7 +1489,7 @@
           "id": {
             "type": "integer"
           },
-          "owner": {
+          "owner_id": {
             "type": "integer"
           },
           "name": {
